# net-rga

./: .gitignore  BENCHMARK_PLAN.md  Cargo.toml  LIMITATIONS.md  PLAN.md  README.md
.cargo/: config.toml
.github/workflows/: benchmark-smoke.yml
benchmarks/: README.md  harness.py  materialize_tier0_corpus.py  materialize_tier1_mixed_small.py  run_tier0.sh  run_tier1_mixed_small.sh
benchmarks/cases/tier0/: denied-private-partial-indexed.json  denied-private-partial.json  exact-riverglass-indexed.json  exact-riverglass.json  log-tenant-alpha-regex-indexed.json  log-tenant-alpha-regex.json  notes-orion-path-indexed.json  notes-orion-path.json  report-orchid-path-indexed.json  report-orchid-path.json  spreadsheet-operations-row-indexed.json  spreadsheet-operations-row.json  unsupported-media-partial-indexed.json  unsupported-media-partial.json
benchmarks/cases/tier1/mixed_small/: docx-checklist-anchor-indexed.json  docx-checklist-anchor.json  pdf-policy-needle-indexed.json  pdf-policy-needle.json
benchmarks/cases/tier1/provider_matrix/: local-fs-riverglass.json  s3-compatible-riverglass.json
benchmarks/cases/tier3/freshness_chaos/: deleted-after-sync.json  denied-after-sync.json
benchmarks/fixtures/tier0/local_fs/: README.md
benchmarks/fixtures/tier0/local_fs/docs/exact/: riverglass.txt
benchmarks/fixtures/tier0/local_fs/docs/notes/archive/: todo.txt
benchmarks/fixtures/tier0/local_fs/docs/private/: secret.txt
benchmarks/fixtures/tier0/local_fs/docs/reports/: q1-summary.md
benchmarks/fixtures/tier0/local_fs/docs/spreadsheets/: budget.csv
benchmarks/judgments/tier0/: local_fs_golden.json
benchmarks/judgments/tier1/: mixed_small.json  provider_matrix.json
benchmarks/judgments/tier3/: freshness_chaos.json
benchmarks/mutations/tier0/: README.md
benchmarks/mutations/tier3/: freshness-chaos-core.json
benchmarks/schemas/: benchmark_case.schema.json  benchmark_result.schema.json  judgment.schema.json
crates/net-rga-cli/: Cargo.toml
crates/net-rga-cli/src/: main.rs  shell.rs
crates/net-rga-cli/tests/snapshots/: search_json.snap  search_text.snap
crates/net-rga-core/: Cargo.toml
crates/net-rga-core/src/: bundle.rs  config.rs  contracts.rs  extraction.rs  extractor_adapters.rs  index.rs  index_lifecycle.rs  lexical.rs  lib.rs  runtime.rs  search_engine.rs  sync.rs
crates/net-rga-core/src/domain/: anchor.rs  canonical.rs  corpus.rs  document.rs  mod.rs  search.rs
crates/net-rga-core/src/providers/: local_fs.rs  mod.rs  s3.rs
crates/net-rga-core/src/state/: mod.rs  schema.sql  sqlite.rs
crates/net-rga-core/tests/: bundle_integration.rs  provider_integration.rs  search_integration.rs  sync_integration.rs
crates/net-rga-core/tests/common/: mod.rs
