[workspace]
members = [
  "crates/net-rga-cli",
  "crates/net-rga-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1.0.100"
aws-config = "1.5.18"
aws-sdk-s3 = "1.66.0"
clap = { version = "4.5.49", features = ["derive"] }
globset = "0.4.18"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
toml = "0.9.7"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
expect_used = "deny"
