[package]
name = "net-rga-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
aws-config.workspace = true
aws-sdk-s3.workspace = true
flate2.workspace = true
globset.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
ignore.workspace = true
pdf-extract.workspace = true
quick-xml.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
zip.workspace = true

[lints]
workspace = true
